syntax = "proto3";

option java_package = "com.bombulis.stock.control.proto";

package com.bombulis.accounting.proto;

service CurrencyService {
  rpc GetCurrencyInfo(CurrencyRequest) returns (CurrencyResponse);
}

message CurrencyRequest {
  string isoCode = 1;
}

message CurrencyResponse {
  string currencyId = 1;
  string isoCode = 2;
  string numericCode = 3;
}